# issue_opentelemetry

./: README.md
01-legacy/: Cargo.toml
01-legacy/src/: main.rs
02-latest/: Cargo.toml
02-latest/src/: main.rs
