[package]
name = "issue-01"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.23.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3" }
